--- a/Style/style.css
+++ b/Style/style.css
@@ -99,6 +99,53 @@ H1{
   
 }
 
+
+ h3 {
+    line-height: 1.2;
+    text-align: center;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+  }
+
+  input[type=range] {
+    width: 100%;
+    margin-top: 10px;
+  }
+  
+input[type=text], [type=number], [type=email], [type=date],[type=file], textarea, select{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit], [type=reset]{
+    width: 100%;
+    background-color: #A4B465;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+  input[type=submit]:hover, [type=reset]:hover{
+      background-color: #626F47;
+  }
+
+.form-container {
+  width: 100%;
+  max-width: 700px;
+  background-color: #F5ECD5;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+
 @media (min-width: 1200px) {
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1140px;
